updated hero section

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -18,218 +18,68 @@
   <div class="clearfix"></div>
   <!-- Header Container / End -->
 
+  <!-- Revolution Slider -->
+  <div id="rev_slider_4_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" data-alias="classicslider1" style="margin:0px auto;background-color:transparent;padding:0px;margin-top:0px;margin-bottom:0px;">
 
-<div class="main-search-container" data-background-image="https://lh3.googleusercontent.com/IWUouz6uPWLofipKuaHh219C5AdniATu6C85bd6DGogdQlJ1M8BAFk6uZx-Q10pVlgYMHrRuZC5V83P_g5XGv21_bRI=s2048" style="max-height:500px">
-	<div class="main-search-inner">
+  <!-- 5.0.7 auto mode -->
+  	<div id="rev_slider_4_1" class="rev_slider home fullwidthabanner" style="display:none;" data-version="5.0.7">
+  		<ul>
 
-		<div class="container">
-			<div class="row">
-				<div class="col-md-9">
-					<h2>Professional Websites. Fast.</h2>
-					<h4>Create fully-featured professional websites in minutes</h4>
+  			<!-- Slide  -->
+  			<li data-index="rs-1" data-transition="fade" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="800" data-fsslotamount="7" data-saveperformance="off">
 
-				</div>
-			</div>
-		</div>
+  				<!-- Background -->
+  				<img src="{{{cdn}}}/images/slider-bg-01.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina data-kenburns="on" data-duration="12000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0">
 
-	</div>
-</div>
+  				<!-- Caption-->
+  				<div class="tp-caption custom-caption-2 tp-shape tp-shapewrapper tp-resizeme rs-parallaxlevel-0"
+  					id="slide-1-layer-2"
+  					data-x="['left','left','left','left']"
+  					data-hoffset="['0','40','40','40']"
+  					data-y="['middle','middle','middle','middle']" data-voffset="['0']"
+  					data-width="['740','740', 740','420','320']"
+  					data-height="auto"
+  					data-whitespace="nowrap"
+  					data-transform_idle="o:1;"
+  					data-transform_in="y:0;opacity:0;s:1000;e:Power2.easeOutExpo;s:400;e:Power2.easeOutExpo"
+  					data-transform_out=""
+  					data-mask_in="x:0px;y:[20%];s:inherit;e:inherit;"
+  					data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
+  					data-start="1000"
+  					data-responsive_offset="on">
 
-<div class="container">
-	<div class="row">
+  					<!-- Caption Content -->
+  					<div class="R_title margin-bottom-15"
+  					id="slide-2-layer-1"
+  					data-x="['left','center','center','center']"
+  					data-hoffset="['0','0','40','0']"
+  					data-y="['middle','middle','middle','middle']"
+  					data-voffset="['-40','-40','-20','-80']"
+  					data-fontsize="['42','36', '32','36','22']"
+  					data-lineheight="['70','60','60','45','35']"
+  					data-width="['740','740', 740','420','320']"
+  					data-height="none" data-whitespace="normal"
+  					data-transform_idle="o:1;"
+  					data-transform_in="y:-50px;sX:2;sY:2;opacity:0;s:1000;e:Power4.easeOut;"
+  					data-transform_out="opacity:0;s:300;"
+  					data-start="600"
+  					data-splitin="none"
+  					data-splitout="none"
+  					data-basealign="slide"
+  					data-responsive_offset="off"
+  					data-responsive="off"
+  					style="z-index: 6; color: #fff; letter-spacing: 0px; font-weight: 600;">Build Professional Websites. Fast.</div>
 
-		<div class="col-md-12">
-			<h3 class="headline centered margin-top-75">
-				Categories
-				<span>Check out our templates across a variety of categories</span>
-			</h3>
-		</div>
+  					<div class="caption-text">Get up and running with a gorgeous new website in under an hour.<br />No coding knowledge required. No confusing tools - we promise.</div>
+  					<a href="#" class="button medium">Learn More</a>
+  				</div>
+  			</li>
+  		</ul>
+  		<div class="tp-static-layers"></div>
 
-	</div>
-</div>
-
-
-<!-- Categories Carousel -->
-<div class="fullwidth-carousel-container margin-top-25">
-	<div class="fullwidth-slick-carousel category-carousel">
-
-    <!-- Item -->
-		<div class="fw-carousel-item">
-			<div class="category-box-container">
-				<a href="#" class="category-box" data-background-image="https://lh3.googleusercontent.com/PhXbSqJFxRJ8pwxdwd-NXm_D0i1gHCw_Z6Xacz699h53YcyyVJZ7-3k40dX-lIMnN_kUyP5288m1yEDTPZH4NAuneg">
-					<div class="category-box-content">
-						<h3>Resume</h3>
-						<span>67 templates</span>
-					</div>
-					<span class="category-box-btn">Browse</span>
-				</a>
-			</div>
-		</div>
-
-		<!-- Item -->
-		<div class="fw-carousel-item">
-			<div class="category-box-container">
-				<a href="#" class="category-box" data-background-image="https://lh3.googleusercontent.com/tOTfAZyD6h4TrnRD_L2EcjFnqAaPokiCKmJleu6JMghlJLZeYPq77HSRbq6qAh9AnzeJ7z1Bv220hH5_fN65vGMxw6Y">
-					<div class="category-box-content">
-						<h3>Restaurant</h3>
-						<span>67 templates</span>
-					</div>
-					<span class="category-box-btn">Browse</span>
-				</a>
-			</div>
-		</div>
-
-		<!-- Item -->
-		<div class="fw-carousel-item">
-			<div class="category-box-container">
-				<a href="#" class="category-box" data-background-image="https://lh3.googleusercontent.com/s3bpe7xXO561pGCzJdUyF35t_vopjoc1iVGmN5Sbt3wxyXM6DcgRm_PPwQf6YYbIuS5F2IiZ_P3e2rHFvhLESj_B">
-					<div class="category-box-content">
-						<h3>Fitness</h3>
-						<span>27 templates</span>
-					</div>
-					<span class="category-box-btn">Browse</span>
-				</a>
-			</div>
-		</div>
-
-		<!-- Item -->
-		<div class="fw-carousel-item">
-			<div class="category-box-container">
-				<a href="#" class="category-box" data-background-image="https://lh3.googleusercontent.com/Qjamm9WtrLx3GphaqkxpH9EJMeTEdg-7EOJSJ_sHKH_sSR-63xBf6tRew8um4bHw4k42HSA3AItfKFODiFkD30m9Ig">
-					<div class="category-box-content">
-						<h3>Realtor</h3>
-						<span>22 templates</span>
-					</div>
-					<span class="category-box-btn">Browse</span>
-				</a>
-			</div>
-		</div>
-
-    <!-- Item -->
-		<div class="fw-carousel-item">
-			<div class="category-box-container">
-				<a href="#" class="category-box" data-background-image="https://lh3.googleusercontent.com/cl7Q23mDhdH2rL7E1C8ruw9mojuQ8OKsoszhJumoQu81HVJYvqgLOuQq3iyGMLSSHqsM-un_fz_dWlUvF6w5xmBIYFE">
-					<div class="category-box-content">
-						<h3>Lessons</h3>
-						<span>22 templates</span>
-					</div>
-					<span class="category-box-btn">Browse</span>
-				</a>
-			</div>
-		</div>
-
-		<!-- Item -->
-		<div class="fw-carousel-item">
-			<div class="category-box-container">
-				<a href="#" class="category-box" data-background-image="https://lh3.googleusercontent.com/Ruprmo7dbJiSee0WqCEUf6S2egek-gYJT7Noi5ooJa7GctfNKNSeRy76k0rYbuQiIRrZcUYx8Ur-OGRVsyjyDhQM3A">
-					<div class="category-box-content">
-						<h3>Landing Page</h3>
-						<span>130 templates</span>
-					</div>
-					<span class="category-box-btn">Browse</span>
-				</a>
-			</div>
-		</div>
-
-	</div>
-</div>
-<!-- Categories Carousel / End -->
-
-
-<!-- Fullwidth Section -->
-<section class="fullwidth margin-top-65 padding-top-75 padding-bottom-70" data-background-color="#f8f8f8">
-
-	<div class="container">
-		<div class="row">
-
-			<div class="col-md-12">
-				<h3 class="headline centered margin-bottom-45">
-					Examples
-					<span>Discover top-rated local businesses</span>
-				</h3>
-			</div>
-
-			<div class="col-md-12">
-				<div class="simple-slick-carousel dots-nav">
-
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="/images/listing-item-01.jpg" alt="">
-
-							<div class="listing-item-content">
-								<span class="tag">Eat & Drink</span>
-								<h3>Tom's Restaurant <i class="verified-icon"></i></h3>
-								<span>964 School Street, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-						<div class="star-rating" data-rating="3.5">
-							<div class="rating-counter">(12 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="/images/listing-item-02.jpg" alt="">
-							<div class="listing-item-details">
-								<ul>
-									<li>Friday, August 10</li>
-								</ul>
-							</div>
-							<div class="listing-item-content">
-								<span class="tag">Events</span>
-								<h3>Sticky Band</h3>
-								<span>Bishop Avenue, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-						<div class="star-rating" data-rating="5.0">
-							<div class="rating-counter">(23 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="/images/listing-item-03.jpg" alt="">
-							<div class="listing-item-details">
-								<ul>
-									<li>Starting from $59 per night</li>
-								</ul>
-							</div>
-							<div class="listing-item-content">
-								<span class="tag">Hotels</span>
-								<h3>Hotel Govendor</h3>
-								<span>778 Country Street, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-						<div class="star-rating" data-rating="2.0">
-							<div class="rating-counter">(17 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				</div>
-
-			</div>
-
-		</div>
-	</div>
-
-</section>
-<!-- Fullwidth Section / End -->
-
+  	</div>
+  </div>
+  <!-- Revolution Slider / End -->
 
 <!-- Info Section -->
 <div class="container">
@@ -275,12 +125,114 @@
 		</div>
 	</div>
 
+  <div class="row margin-top-70">
+		<div class="col-md-8 col-md-offset-2">
+      <iframe width="100%" height="415" src="https://www.youtube.com/embed/1NY1rqokhLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+	</div>
+
+
 </div>
 <!-- Info Section / End -->
 
 
+<!-- Fullwidth Section -->
+<section class="fullwidth margin-top-65 padding-top-75 padding-bottom-70" data-background-color="#f8f8f8">
+
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-12">
+				<h3 class="headline centered margin-bottom-45">
+					Examples
+					<span>Discover top-rated local businesses</span>
+				</h3>
+			</div>
+
+			<div class="col-md-12">
+				<div class="simple-slick-carousel dots-nav">
+
+				<!-- Listing Item -->
+				<div class="carousel-item">
+					<a href="listings-single-page.html" class="listing-item-container">
+						<div class="listing-item">
+							<img src="{{{cdn}}}/images/listing-item-01.jpg" alt="">
+
+							<div class="listing-item-content">
+								<span class="tag">Eat & Drink</span>
+								<h3>Tom's Restaurant <i class="verified-icon"></i></h3>
+								<span>964 School Street, New York</span>
+							</div>
+							<span class="like-icon"></span>
+						</div>
+						<div class="star-rating" data-rating="3.5">
+							<div class="rating-counter">(12 reviews)</div>
+						</div>
+					</a>
+				</div>
+				<!-- Listing Item / End -->
+
+				<!-- Listing Item -->
+				<div class="carousel-item">
+					<a href="listings-single-page.html" class="listing-item-container">
+						<div class="listing-item">
+							<img src="{{{cdn}}}/images/listing-item-02.jpg" alt="">
+							<div class="listing-item-details">
+								<ul>
+									<li>Friday, August 10</li>
+								</ul>
+							</div>
+							<div class="listing-item-content">
+								<span class="tag">Events</span>
+								<h3>Sticky Band</h3>
+								<span>Bishop Avenue, New York</span>
+							</div>
+							<span class="like-icon"></span>
+						</div>
+						<div class="star-rating" data-rating="5.0">
+							<div class="rating-counter">(23 reviews)</div>
+						</div>
+					</a>
+				</div>
+				<!-- Listing Item / End -->
+
+				<!-- Listing Item -->
+				<div class="carousel-item">
+					<a href="listings-single-page.html" class="listing-item-container">
+						<div class="listing-item">
+							<img src="{{{cdn}}}/images/listing-item-03.jpg" alt="">
+							<div class="listing-item-details">
+								<ul>
+									<li>Starting from $59 per night</li>
+								</ul>
+							</div>
+							<div class="listing-item-content">
+								<span class="tag">Hotels</span>
+								<h3>Hotel Govendor</h3>
+								<span>778 Country Street, New York</span>
+							</div>
+							<span class="like-icon"></span>
+						</div>
+						<div class="star-rating" data-rating="2.0">
+							<div class="rating-counter">(17 reviews)</div>
+						</div>
+					</a>
+				</div>
+				<!-- Listing Item / End -->
+
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+
+</section>
+<!-- Fullwidth Section / End -->
+
+
 <!-- Recent Blog Posts -->
-<section class="fullwidth border-top margin-top-70 padding-top-75 padding-bottom-75" data-background-color="#fff">
+<section class="fullwidth margin-top-30 padding-top-75 padding-bottom-75" data-background-color="#fff">
 	<div class="container">
 
 		<div class="row">
@@ -296,7 +248,7 @@
 			<div class="col-md-4">
 				<a href="pages-blog-post.html" class="blog-compact-item-container">
 					<div class="blog-compact-item">
-						<img src="/images/blog-compact-post-01.jpg" alt="">
+						<img src="{{{cdn}}}/images/blog-compact-post-01.jpg" alt="">
 						<span class="blog-item-tag">Tips</span>
 						<div class="blog-compact-item-content">
 							<ul class="blog-post-tags">
@@ -314,7 +266,7 @@
 			<div class="col-md-4">
 				<a href="pages-blog-post.html" class="blog-compact-item-container">
 					<div class="blog-compact-item">
-						<img src="/images/blog-compact-post-02.jpg" alt="">
+						<img src="{{{cdn}}}/images/blog-compact-post-02.jpg" alt="">
 						<span class="blog-item-tag">Tips</span>
 						<div class="blog-compact-item-content">
 							<ul class="blog-post-tags">
@@ -332,7 +284,7 @@
 			<div class="col-md-4">
 				<a href="pages-blog-post.html" class="blog-compact-item-container">
 					<div class="blog-compact-item">
-						<img src="/images/blog-compact-post-03.jpg" alt="">
+						<img src="{{{cdn}}}/images/blog-compact-post-03.jpg" alt="">
 						<span class="blog-item-tag">Tips</span>
 						<div class="blog-compact-item-content">
 							<ul class="blog-post-tags">
@@ -348,7 +300,7 @@
 
 			<div class="col-md-12 centered-content">
 				<a href="#" class="button border margin-top-10">
-          View All Tutorials
+          View All
         </a>
 			</div>
 
@@ -358,12 +310,155 @@
 </section>
 <!-- Recent Blog Posts / End -->
 
+<section class="fullwidth margin-top-30 padding-top-75 padding-bottom-75" data-background-color="#fff">
+  <div class="container">
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="pricing-container margin-top-10">
+
+      <!-- Plan #1 -->
+        <div class="plan">
+          <div class="plan-price">
+            <h3 class="margin-bottom-0">Basic</h3>
+            <span class="value padding-top-10">Free</span>
+            <span class="period margin-top-10">Forever</span>
+          </div>
+
+          <div class="plan-features">
+            <ul>
+              <li>One Site</li>
+              <li>Automatic SSL</li>
+              <li>Custom Domain</li>
+              <li>Built-in CMS</li>
+              <li>$5 per Additional Site</li>
+            </ul>
+            <a id="btn-join-basic" class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
+          </div>
+        </div>
+
+        <!-- Plan #3 -->
+        <div class="plan">
+          <div class="plan-price" style="background:red">
+            <h3 style="color:#fff" class="margin-bottom-0">Pro</h3>
+            <span style="color:#fff" class="value padding-top-10">$10</span>
+            <span style="color:#fff" class="period margin-top-10">Per Month</span>
+          </div>
+
+          <div class="plan-features">
+            <ul>
+              <li>5 Sites</li>
+              <li>Automatic SSL</li>
+              <li>Custom Domain</li>
+              <li>Built-in CMS</li>
+              <li>$5 per Additional Site</li>
+            </ul>
+            <a class="button border" href="#">Get Started</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
+
+
   {{>footer-dark}}
 </div>
 <!-- Wrapper / End -->
 
 
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+
+<!-- REVOLUTION SLIDER SCRIPT -->
+<script type="text/javascript" src="{{{cdn}}}/scripts/themepunch.tools.min.js"></script>
+<script type="text/javascript" src="{{{cdn}}}/scripts/themepunch.revolution.min.js"></script>
+
+<script type="text/javascript">
+	var tpj=jQuery;
+	var revapi4;
+	tpj(document).ready(function() {
+		if(tpj("#rev_slider_4_1").revolution == undefined){
+			revslider_showDoubleJqueryError("#rev_slider_4_1");
+		}
+    else{
+			revapi4 = tpj("#rev_slider_4_1").show().revolution({
+				sliderType:"standard",
+				jsFileLocation:"scripts/",
+				sliderLayout:"auto",
+				dottedOverlay:"none",
+				delay:9000,
+				navigation: {
+					keyboardNavigation:"off",
+					keyboard_direction: "horizontal",
+					mouseScrollNavigation:"off",
+					onHoverStop:"on",
+					touch:{
+						touchenabled:"on",
+						swipe_threshold: 75,
+						swipe_min_touches: 1,
+						swipe_direction: "horizontal",
+						drag_block_vertical: false
+					}
+					,
+					bullets: {
+				enable:false,
+				hide_onmobile:true,
+				hide_under:600,
+				style:"hermes",
+				hide_onleave:true,
+				hide_delay:200,
+				hide_delay_mobile:1200,
+				direction:"horizontal",
+				h_align:"center",
+				v_align:"bottom",
+				h_offset:0,
+				v_offset:32,
+				space:5,
+				tmp:''
+					}
+				},
+				viewPort: {
+					enable:true,
+					outof:"pause",
+					visible_area:"80%"
+			},
+			responsiveLevels:[1200,992,768,480],
+			visibilityLevels:[1200,992,768,480],
+			gridwidth:[1180,1024,778,480],
+			gridheight:[640,500,400,300],
+			lazyType:"none",
+			parallax: {
+				type:"mouse",
+				origo:"slidercenter",
+				speed:2000,
+				levels:[2,3,4,5,6,7,12,16,10,25,47,48,49,50,51,55],
+				type:"mouse",
+			},
+			shadow:0,
+			spinner:"off",
+			stopLoop:"off",
+			stopAfterLoops:-1,
+			stopAtSlide:-1,
+			shuffle:"off",
+			autoHeight:"off",
+			hideThumbsOnMobile:"off",
+			hideSliderAtLimit:0,
+			hideCaptionAtLimit:0,
+			hideAllCaptionAtLilmit:0,
+			debugMode:false,
+			fallbacks: {
+				simplifyAll:"off",
+				nextSlideOnWindowFocus:"off",
+				disableFocusListener:false,
+			}
+		});
+		}
+	});	/*ready*/
+</script>
+<script type="text/javascript" src="{{{cdn}}}/dist/js/revolution.min.js"></script>
+
 {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 </body>
 </html>
