--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -88,11 +88,14 @@
 		<div class="col-md-8 col-md-offset-2">
 			<h2 class="headline centered margin-top-80">
 				How It Works
-				<span class="margin-top-25">
-          Explore some of the best tips from around the world from our partners and friends.
-          Discover some of the most popular templates in Sydney.
-        </span>
 			</h2>
+      <p style="font-size:18px" class="margin-top-25 text-center">
+        Simply input your content and walk away - no coding required!
+        No more messing with confusing editors, drag & drop tools, or
+        ridiculously complicated features for "beginners". On Vertex 360,
+        simply input your text and images and move on with your life,
+        business, family - more important stuff.
+      </p>
 		</div>
 	</div>
 
@@ -100,32 +103,46 @@
 		<!-- Stage -->
 		<div class="col-md-4">
 			<div class="icon-box-2 with-line">
-				<i class="im im-icon-Map2"></i>
-				<h3>Find Interesting Place</h3>
-				<p>Proin dapibus nisl ornare diam varius tempus. Aenean a quam luctus, finibus tellus ut, convallis eros sollicitudin turpis.</p>
+				<i class="im im-icon-Code-Window"></i>
+				<h3>Choose a Template</h3>
+        <p>
+          Select from our growing list of professional templates across several industries. Check back regularly for new templates.
+        </p>
 			</div>
 		</div>
 
 		<!-- Stage -->
 		<div class="col-md-4">
 			<div class="icon-box-2 with-line">
-				<i class="im im-icon-Mail-withAtSign"></i>
-				<h3>Contact a Few Owners</h3>
-				<p>Maecenas pulvinar, risus in facilisis dignissim, quam nisi hendrerit nulla, id vestibulum metus nullam viverra porta purus.</p>
+				<i class="im im-icon-File-Edit"></i>
+				<h3>Enter Your Content</h3>
+        <p>
+          Add your own text, images, and social media. Most templates also support CMS data such as blogs, users, and newsletter subscribers.
+        </p>
 			</div>
 		</div>
 
 		<!-- Stage -->
 		<div class="col-md-4">
 			<div class="icon-box-2">
-				<i class="im im-icon-Checked-User"></i>
-				<h3>Make a Reservation</h3>
-				<p>Faucibus ante, in porttitor tellus blandit et. Phasellus tincidunt metus lectus sollicitudin feugiat pharetra consectetur.</p>
+				<i class="im im-icon-Sunglasses-Smiley2"></i>
+				<h3>Profit!</h3>
+				<p>
+          That's it! Get back to going what you do best - growing your business. Vertex 360 is all about simplicity without compromise.
+        </p>
 			</div>
 		</div>
 	</div>
 
-  <div class="row margin-top-70">
+  <div class="row margin-top-20">
+  <div class="col-md-12 centered-content">
+    <a href="/templates" class="button">
+      VIEW ALL TEMPLATES
+    </a>
+  </div>
+  </div>
+
+  <div class="row margin-top-50">
 		<div class="col-md-8 col-md-offset-2">
       <iframe width="100%" height="415" src="https://www.youtube.com/embed/1NY1rqokhLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
@@ -144,7 +161,7 @@
 
 			<div class="col-md-12">
 				<h3 class="headline centered margin-bottom-45">
-					Examples
+					Featured Templates
 					<span>Discover top-rated local businesses</span>
 				</h3>
 			</div>
@@ -163,7 +180,6 @@
 								<h3>Tom's Restaurant <i class="verified-icon"></i></h3>
 								<span>964 School Street, New York</span>
 							</div>
-							<span class="like-icon"></span>
 						</div>
 						<div class="star-rating" data-rating="3.5">
 							<div class="rating-counter">(12 reviews)</div>
@@ -187,7 +203,6 @@
 								<h3>Sticky Band</h3>
 								<span>Bishop Avenue, New York</span>
 							</div>
-							<span class="like-icon"></span>
 						</div>
 						<div class="star-rating" data-rating="5.0">
 							<div class="rating-counter">(23 reviews)</div>
@@ -211,7 +226,6 @@
 								<h3>Hotel Govendor</h3>
 								<span>778 Country Street, New York</span>
 							</div>
-							<span class="like-icon"></span>
 						</div>
 						<div class="star-rating" data-rating="2.0">
 							<div class="rating-counter">(17 reviews)</div>
@@ -369,6 +383,7 @@
 <!-- Wrapper / End -->
 
 
+<script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 
 <!-- REVOLUTION SLIDER SCRIPT -->
@@ -427,7 +442,7 @@
 			responsiveLevels:[1200,992,768,480],
 			visibilityLevels:[1200,992,768,480],
 			gridwidth:[1180,1024,778,480],
-			gridheight:[640,500,400,300],
+			gridheight:[580,500,500,500],
 			lazyType:"none",
 			parallax: {
 				type:"mouse",
