--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -169,15 +169,15 @@
 			<div class="col-md-12">
 				<div class="simple-slick-carousel dots-nav">
 
-				<!-- Listing Item -->
+        {{#templates}}
 				<div class="carousel-item">
 					<a href="listings-single-page.html" class="listing-item-container">
 						<div class="listing-item">
-							<img src="{{{cdn}}}/images/listing-item-01.jpg" alt="">
+							<img src="{{{image}}}=s120-c" alt="Vertex 360">
 
 							<div class="listing-item-content">
-								<span class="tag">Eat & Drink</span>
-								<h3>Tom's Restaurant <i class="verified-icon"></i></h3>
+								<span class="tag">{{template.category}}</span>
+								<h3>{{name}}</h3>
 								<span>964 School Street, New York</span>
 							</div>
 						</div>
@@ -186,58 +186,10 @@
 						</div>
 					</a>
 				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="{{{cdn}}}/images/listing-item-02.jpg" alt="">
-							<div class="listing-item-details">
-								<ul>
-									<li>Friday, August 10</li>
-								</ul>
-							</div>
-							<div class="listing-item-content">
-								<span class="tag">Events</span>
-								<h3>Sticky Band</h3>
-								<span>Bishop Avenue, New York</span>
-							</div>
-						</div>
-						<div class="star-rating" data-rating="5.0">
-							<div class="rating-counter">(23 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="{{{cdn}}}/images/listing-item-03.jpg" alt="">
-							<div class="listing-item-details">
-								<ul>
-									<li>Starting from $59 per night</li>
-								</ul>
-							</div>
-							<div class="listing-item-content">
-								<span class="tag">Hotels</span>
-								<h3>Hotel Govendor</h3>
-								<span>778 Country Street, New York</span>
-							</div>
-						</div>
-						<div class="star-rating" data-rating="2.0">
-							<div class="rating-counter">(17 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
+        {{/templates}}
 
 				</div>
-
 			</div>
-
 		</div>
 	</div>
 
