link to template

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -171,9 +171,9 @@
 
         {{#templates}}
 				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
+					<a href="/template/{{slug}}" class="listing-item-container">
 						<div class="listing-item">
-							<img src="{{{image}}}=s120-c" alt="Vertex 360">
+							<img src="{{{image}}}=s512-c" alt="Vertex 360">
 
 							<div class="listing-item-content">
 								<span class="tag">{{template.category}}</span>
