--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -262,8 +262,8 @@
 			<!-- Blog post Item / End -->
 
 			<div class="col-md-12 centered-content">
-				<a href="#" class="button border margin-top-10">
-          View All
+				<a href="/community?selected=blog" class="button margin-top-10">
+          VIEW MORE
         </a>
 			</div>
 
