show recent blog posts

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -235,10 +235,10 @@
 						<img src="{{{cdn}}}/images/blog-compact-post-02.jpg" alt="">
 						<div class="blog-compact-item-content">
 							<ul class="blog-post-tags">
-								<li>18 August 2017</li>
+								<li>{{dateString}}</li>
 							</ul>
-							<h3>The 50 Greatest Street Arts In London</h3>
-							<p>Sed sed tristique nibh iam porta volutpat finibus. Donec in aliquet urneget mattis lorem. Pellentesque pellentesque.</p>
+							<h3>{{title}}</h3>
+							<p>{{preview}}</p>
 						</div>
 					</div>
 				</a>
