--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -215,24 +215,7 @@
 			<div class="col-md-4">
 				<a href="/post/{{slug}}" class="blog-compact-item-container">
 					<div class="blog-compact-item">
-						<img src="{{{image}}}" alt="Vertex 360">
-						<div class="blog-compact-item-content">
-							<ul class="blog-post-tags">
-								<li>{{dateString}}</li>
-							</ul>
-							<h3>{{title}}</h3>
-							<p>Sed sed tristique nibh iam porta volutpat finibus. Donec in aliquet urneget mattis lorem. Pellentesque pellentesque.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-      {{/posts}}
-
-			<!-- Blog Post Item -->
-			<div class="col-md-4">
-				<a href="pages-blog-post.html" class="blog-compact-item-container">
-					<div class="blog-compact-item">
-						<img src="{{{cdn}}}/images/blog-compact-post-02.jpg" alt="">
+						<img src="{{{image}}}=s1024" alt="Vertex 360">
 						<div class="blog-compact-item-content">
 							<ul class="blog-post-tags">
 								<li>{{dateString}}</li>
@@ -243,24 +226,7 @@
 					</div>
 				</a>
 			</div>
-			<!-- Blog post Item / End -->
-
-			<!-- Blog Post Item -->
-			<div class="col-md-4">
-				<a href="pages-blog-post.html" class="blog-compact-item-container">
-					<div class="blog-compact-item">
-						<img src="{{{cdn}}}/images/blog-compact-post-03.jpg" alt="">
-						<div class="blog-compact-item-content">
-							<ul class="blog-post-tags">
-								<li>10 August 2017</li>
-							</ul>
-							<h3>The Best Cofee Shops In Sydney Neighborhoods</h3>
-							<p>Sed sed tristique nibh iam porta volutpat finibus. Donec in aliquet urneget mattis lorem. Pellentesque pellentesque.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<!-- Blog post Item / End -->
+      {{/posts}}
 
 			<div class="col-md-12 centered-content">
 				<a href="/community?selected=blog" class="button margin-top-10">
