remove ratings in template previews

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -178,11 +178,8 @@
 							<div class="listing-item-content">
 								<span class="tag">{{template.category}}</span>
 								<h3>{{name}}</h3>
-								<span>964 School Street, New York</span>
+								<span>FREE</span>
 							</div>
-						</div>
-						<div class="star-rating" data-rating="3.5">
-							<div class="rating-counter">(12 reviews)</div>
 						</div>
 					</a>
 				</div>
