--- a/views/index.mustache
+++ b/views/index.mustache
@@ -297,6 +297,7 @@
 
 
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+<script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 
 <!-- REVOLUTION SLIDER SCRIPT -->
