--- a/views/index.mustache
+++ b/views/index.mustache
@@ -162,7 +162,9 @@
 			<div class="col-md-12">
 				<h3 class="headline centered margin-bottom-45">
 					Featured Templates
-					<span>Discover top-rated local businesses</span>
+					<span>
+            Browse our fully featured, ready-to-launch templates
+          </span>
 				</h3>
 			</div>
 
