remove placeholder for password

--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -51,7 +51,7 @@
           <div class="input-row">
             <div class="input-label">Password</div>
             <div class="input-container">
-              <input id="input-register-password" placeholder="***" type="password" />
+              <input id="input-register-password" placeholder="" type="password" />
             </div>
           </div>
 
