link to template page, not actual site

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -163,13 +163,13 @@
           <li>
             <div class="list-box-listing">
               <div class="list-box-listing-img">
-                <a target="_blank" href="https://{{slug}}.vertex360.co">
+                <a target="_blank" href="https://www.vertex360.co/template/{{slug}}">
                   <img src="{{image}}=s512-c" alt="Vertex 360 | {{name}}" />
                 </a>
               </div>
               <div class="list-box-listing-content">
                 <div class="inner">
-                  <h3><a target="_blank" href="https://{{slug}}.vertex360.co">{{name}}</a></h3>
+                  <h3><a target="_blank" href="https://www.vertex360.co/template/{{slug}}">{{name}}</a></h3>
                   <span>{{template.category}}</span>
                 </div>
               </div>
