--- a/views/template.mustache
+++ b/views/template.mustache
@@ -82,7 +82,7 @@
     					<p>{{{template.description}}}</p>
               {{#hasVideo}}
               <iframe width="560" height="315" src="https://www.youtube.com/embed/<%template.video%>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              {{}}/hasVideo}}
+              {{/hasVideo}}
               <h4>Screenshots</h4>
               {{#template.images}}
               <div class="screenshot">
