--- a/views/template.mustache
+++ b/views/template.mustache
@@ -81,7 +81,7 @@
               <img style="max-width:60%" class="post-img" src="{{{template.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
     					<p>{{{template.description}}}</p>
               {{#template.hasVideo}}
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/<%template.video%>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/{{template.video}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               {{/template.hasVideo}}
               <h4>Screenshots</h4>
               {{#template.images}}
