emphasize 5 sites on premium plan

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -276,7 +276,7 @@
 
           <div class="plan-features">
             <ul>
-              <li>5 Sites</li>
+              <li><strong>5 Sites</strong></li>
               <li>Automatic SSL</li>
               <li>Custom Domain</li>
               <li>Built-in CMS</li>
