--- a/views/index.mustache
+++ b/views/index.mustache
@@ -135,11 +135,11 @@
 	</div>
 
   <div class="row margin-top-20">
-  <div class="col-md-12 centered-content">
-    <a href="/templates" class="button">
-      VIEW ALL TEMPLATES
-    </a>
-  </div>
+    <div class="col-md-12 centered-content">
+      <a href="/templates" class="button">
+        VIEW ALL TEMPLATES
+      </a>
+    </div>
   </div>
 
   <div class="row margin-top-50">
@@ -190,6 +190,15 @@
 				</div>
 			</div>
 		</div>
+
+    <div class="row margin-top-20">
+      <div class="col-md-12 centered-content">
+        <a href="/templates" class="button">
+          VIEW ALL TEMPLATES
+        </a>
+      </div>
+    </div>
+    
 	</div>
 
 </section>
