--- a/views/index.mustache
+++ b/views/index.mustache
@@ -266,12 +266,12 @@
           <div class="plan-features">
             <ul>
               <li>One Site</li>
-              <li>Automatic SSL</li>
-              <li>Custom Domain</li>
               <li>Built-in CMS</li>
+              <li><strike>Automatic SSL</strike></li>
+              <li><strike>Custom Domain</strike></li>
               <li>$5 per Additional Site</li>
             </ul>
-            <a id="btn-join-basic" class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
+            <a id="btn-join-basic" class="button popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
           </div>
         </div>
 
@@ -286,12 +286,12 @@
           <div class="plan-features">
             <ul>
               <li><strong>5 Sites</strong></li>
+              <li>Built-in CMS</li>
               <li>Automatic SSL</li>
               <li>Custom Domain</li>
-              <li>Built-in CMS</li>
               <li>$5 per Additional Site</li>
             </ul>
-            <a class="button border" href="#">Get Started</a>
+            <a class="button" href="#">Get Started</a>
           </div>
         </div>
 
