--- a/views/template.mustache
+++ b/views/template.mustache
@@ -81,7 +81,9 @@
               <img style="max-width:60%" class="post-img" src="{{{template.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
 
               {{#template.hasVideo}}
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/{{template.template.video}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div style="margin-top:30px">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/{{template.template.video}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
               {{/template.hasVideo}}
 
     					<p>{{{template.description}}}</p>
