larger header text

--- a/views/landing-2.mustache
+++ b/views/landing-2.mustache
@@ -212,7 +212,7 @@
                 <hr class="mt-5"/>
                 <div class="row my-5">
                     <div class="col-md-6 order-2 order-md-1 my-md-auto">
-                        <h3>Keep It Simple</h3>
+                        <h1>Keep It <em>SIMPLE</em></h1>
                         <p class="text-muted lead">
 														Simply input your content and walk away - no coding required! No messing with confusing editors, drag & drop tools, or ridiculously complicated features for "beginners". On Vertex 360, simply input your content and move on with your life, business, family - more important stuff
                         </p>
@@ -234,7 +234,7 @@
                         <img src="https://lh3.googleusercontent.com/hOMESD3Uu8P2mLkwfHZhFLtz77SZw6_NSILAGi14hPKNn4E68-VXZ8uTirfoT2_KV5ezgDf7CAual78VvkkzHejkKiE=s1024" class="img-fluid d-block mx-auto" alt="MacBook"/>
                     </div>
                     <div class="col-md-6 my-md-auto">
-                        <h3>Fully Featured</h3>
+                        <h1>Fully Featured</h1>
                         <p class="text-muted lead">
                             Our simplicty doesn't come at the expense of features. Every Vertex 360 site comes equipped with a full content management system, SSL integration, mobile responsiveness, and more.
                         </p>
@@ -327,7 +327,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
-                        <h2 class="dot-circle">Affordable Pricing.</h2>
+                        <h1 class="dot-circle">Affordable Pricing.</h1>
                         <p class="text-muted lead">Go ahead and compare our prices to the other website builders.<br />We'll be right here when you get back.</p>
                         <div class="row pricing-table mt-5">
                             <div class="col-sm-5">
